cbits/Bullet.h

void btAxisSweep3Internal_unsignedshort__m_ownsPairCache_set(void *c,int a); //attribute: bool btAxisSweep3Internal_unsignedshort_->m_ownsPairCache
int btAxisSweep3Internal_unsignedshort__m_ownsPairCache_get(void *c); //attribute: bool btAxisSweep3Internal_unsignedshort_->m_ownsPairCache
void btAxisSweep3Internal_unsignedshort__m_invalidPair_set(void *c,int a); //attribute: int btAxisSweep3Internal_unsignedshort_->m_invalidPair
int btAxisSweep3Internal_unsignedshort__m_invalidPair_get(void *c); //attribute: int btAxisSweep3Internal_unsignedshort_->m_invalidPair
void btAxisSweep3Internal_unsignedshort__m_raycastAccelerator_set(void *c,void* a); //attribute: ::btDbvtBroadphase * btAxisSweep3Internal_unsignedshort_->m_raycastAccelerator
void* btAxisSweep3Internal_unsignedshort__m_raycastAccelerator_get(void *c); //attribute: ::btDbvtBroadphase * btAxisSweep3Internal_unsignedshort_->m_raycastAccelerator
void btAxisSweep3Internal_unsignedshort__m_nullPairCache_set(void *c,void* a); //attribute: ::btOverlappingPairCache * btAxisSweep3Internal_unsignedshort_->m_nullPairCache
void* btAxisSweep3Internal_unsignedshort__m_nullPairCache_get(void *c); //attribute: ::btOverlappingPairCache * btAxisSweep3Internal_unsignedshort_->m_nullPairCache
void* btMultiSapBroadphase_btBridgeProxy_new(); //constructor: btBridgeProxy  ( ::btMultiSapBroadphase::btBridgeProxy::* )(  ) 
void btMultiSapBroadphase_btBridgeProxy_free(void *c);
 
void btMultiSapBroadphase_btBridgeProxy_m_childBroadphase_set(void *c,void* a); //attribute: ::btBroadphaseInterface * btMultiSapBroadphase_btBridgeProxy->m_childBroadphase
void* btMultiSapBroadphase_btBridgeProxy_m_childBroadphase_get(void *c); //attribute: ::btBroadphaseInterface * btMultiSapBroadphase_btBridgeProxy->m_childBroadphase
void btMultiSapBroadphase_btBridgeProxy_m_childProxy_set(void *c,void* a); //attribute: ::btBroadphaseProxy * btMultiSapBroadphase_btBridgeProxy->m_childProxy
void* btMultiSapBroadphase_btBridgeProxy_m_childProxy_get(void *c); //attribute: ::btBroadphaseProxy * btMultiSapBroadphase_btBridgeProxy->m_childProxy
int btBroadphaseAabbCallback_process(void *c,void* p0); //method: process bool ( ::btBroadphaseAabbCallback::* )( ::btBroadphaseProxy const * ) 
void btBroadphaseInterface_rayTest(void *c,float* p0,float* p1,void* p2,float* p3,float* p4); //method: rayTest void ( ::btBroadphaseInterface::* )( ::btVector3 const &,::btVector3 const &,::btBroadphaseRayCallback &,::btVector3 const &,::btVector3 const & ) 
void btBroadphaseInterface_setAabb(void *c,void* p0,float* p1,float* p2,void* p3); //method: setAabb void ( ::btBroadphaseInterface::* )( ::btBroadphaseProxy *,::btVector3 const &,::btVector3 const &,::btDispatcher * ) 
void btBroadphaseInterface_getBroadphaseAabb(void *c,float* p0,float* p1); //method: getBroadphaseAabb void ( ::btBroadphaseInterface::* )( ::btVector3 &,::btVector3 & ) const
void btBroadphaseInterface_resetPool(void *c,void* p0); //method: resetPool void ( ::btBroadphaseInterface::* )( ::btDispatcher * ) 
void btBroadphaseInterface_calculateOverlappingPairs(void *c,void* p0); //method: calculateOverlappingPairs void ( ::btBroadphaseInterface::* )( ::btDispatcher * ) 
void btBroadphaseInterface_printStats(void *c); //method: printStats void ( ::btBroadphaseInterface::* )(  ) 
void btBroadphaseInterface_getAabb(void *c,void* p0,float* p1,float* p2); //method: getAabb void ( ::btBroadphaseInterface::* )( ::btBroadphaseProxy *,::btVector3 &,::btVector3 & ) const